<resources>
    <string name="app_name">EClimaYahoo</string>
    <string name="city">Popayan</string>
    <string name="temp">Temperatura</string>
    <string name="presion">Presion</string>
    <string name="hum">Humedad</string>
    <string name="reload">Recargar</string>
    <string name="http_error_404">Recurso no encontrado</string>
    <string name="http_error_server">Erro en Servidor</string>
    <string name="http_error_internet">Sin Conexion a internet</string>
    <string name="http_error_timeout">El servidor no responde</string>
</resources>
