<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="clima"
            type="unicauca.movil.eclimayahoo.models.Clima"/>
        <variable
            name="onClick"
            type="android.view.View.OnClickListener"/>
    </data>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        >

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Display2"
            android:layout_marginBottom="@dimen/small"
            android:text="@string/city"
            />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Body2"
            android:text="@{clima.descripcion}"
            tools:text="Descripcion de Clima"
            android:layout_marginBottom="@dimen/small"
            />

        <TableRow>
            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/temp"
                android:layout_marginRight="@dimen/small"
                />
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@{clima.temp}"
                tools:text="30"
                />
        </TableRow>
        <TableRow>
            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/presion"
                android:layout_marginRight="@dimen/small"
                />
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@{clima.presion}"
                tools:text="30"
                />
        </TableRow>
        <TableRow
            android:layout_marginBottom="@dimen/medium"
            >
            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/hum"
                android:layout_marginRight="@dimen/small"
                />
            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@{clima.humedad}"
                tools:text="30"
                />
        </TableRow>

        <Button
            android:text="@string/reload"
            app:setOnClickListener="@{onClick}"
            />


    </TableLayout>
</layout>
